external-crates/move/crates/move-compiler/tests/move_2024/ide_mode/missing_match_untyped.ide.exp
error[E02001]: duplicate declaration, item, or annotation
  ┌─ tests/move_2024/ide_mode/missing_match_untyped.move:2:3
  │
1 │ #[allow(ide_path_autocomplete)]
  │   ----- Attribute previously given here
2 │ #[allow(ide_dot_autocomplete)]
  │   ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Duplicate attribute 'allow' attached to the same item

error[E03009]: unbound variable
  ┌─ tests/move_2024/ide_mode/missing_match_untyped.move:5:16
  │
5 │         match (e) {
  │                ^ Unbound variable 'e'

error[E04036]: non-exhaustive pattern
  ┌─ tests/move_2024/ide_mode/missing_match_untyped.move:5:16
  │
5 │         match (e) {
  │                ^ Pattern '_' not covered

note[I15004]: IDE missing match arms
  ┌─ tests/move_2024/ide_mode/missing_match_untyped.move:5:19
  │  
5 │           match (e) {
  │ ╭───────────────────^
6 │ │         }
  │ ╰─────────^ Missing arms: '_'

error[E03009]: unbound variable
   ┌─ tests/move_2024/ide_mode/missing_match_untyped.move:10:16
   │
10 │         match (e) {
   │                ^ Unbound variable 'e'

note[I15004]: IDE missing match arms
   ┌─ tests/move_2024/ide_mode/missing_match_untyped.move:10:19
   │  
10 │           match (e) {
   │ ╭───────────────────^
11 │ │             E::Two(n) => n
12 │ │         }
   │ ╰─────────^ Missing arms: '_'

error[E03006]: unexpected name in this position
   ┌─ tests/move_2024/ide_mode/missing_match_untyped.move:11:13
   │
11 │             E::Two(n) => n
   │             ^ Could not resolve the name 'E'

error[E03009]: unbound variable
   ┌─ tests/move_2024/ide_mode/missing_match_untyped.move:11:26
   │
11 │             E::Two(n) => n
   │                          ^ Unbound variable 'n'

